cleaned up cbow code

--- a/dataloader_cbow.ipynb
+++ b/dataloader_cbow.ipynb
@@ -2,151 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['is this a child or adult ? adult']\n",
-      "[\"what color is horse ? brown, but it's black and white photo\"]\n",
-      "['how many bikes there ? 3']\n",
-      "['what color is the sink ? white']\n",
-      "['is this a zoo ? yes']\n",
-      "['is this a zoo ? yes']\n",
-      "['is this a child or adult ? adult']\n",
-      "[\"what color is horse ? brown, but it's black and white photo\"]\n",
-      "['what color is the sink ? white']\n",
-      "['how many bikes there ? 3']\n",
-      "{'dialog': [('is', 'is', 'what', 'what'), ('this', 'this', 'color', 'color'), ('a', 'a', 'is', 'is'), ('zoo', 'child', 'horse', 'the'), ('?', 'or', '?', 'sink'), ('yes', 'adult', 'brown,', '?'), ('how', '?', 'but', 'white'), ('many', 'adult', \"it's\", 'is'), ('giraffes', 'male', 'black', 'the'), ('are', 'or', 'and', 'light'), ('there', 'female', 'white', 'on'), ('?', '?', 'photo', '?'), ('1', 'male', 'is', 'yes'), ('how', 'are', 'this', 'any'), ('many', 'they', 'outdoors', 'people'), ('zebras', 'inside', '?', '?'), ('?', 'or', 'yes', 'no'), ('1', 'outside', 'do', 'how'), ('are', '?', 'you', 'many'), ('people', 'inside', 'see', 'dishes'), ('there', 'are', 'any', 'are'), ('?', 'they', 'horses', 'visible'), ('no', 'laying', '?', '?'), ('what', 'on', 'yes,', '0'), ('did', 'the', '1', 'any'), ('the', 'floor', 'how', 'windows'), ('giraffe', '?', 'about', '?'), ('eat', 'yes,', 'fences', '1'), ('?', 'but', '?', 'can'), ('not', 'there', 'no', 'you'), ('sure', 'is', 'do', 'see'), ('it', 'a', 'you', 'food'), ('is', 'blanket', 'see', '?'), ('eating', 'in', 'any', 'no'), ('out', 'between', 'buildings', 'any'), ('of', 'them', '?', 'pots'), ('bin', 'and', 'two,', '?'), ('facing', 'the', '1', 'no'), ('other', 'floor', 'is', 'any'), ('way', 'is', 'brick,', 'utensils'), ('is', 'the', '1', '?'), ('it', 'floor', 'is', 'no'), ('sunny', 'carpeted', 'wood', 'what'), ('?', 'or', 'are', 'color'), ('yes', 'wooden', 'they', 'is'), ('how', '?', 'single', 'the'), ('many', 'it', 'story', 'dish'), ('trees', 'is', '?', '?'), ('are', 'tile', 'yes', 'no'), ('there', 'what', 'do', 'dishes'), ('?', 'color', 'they', 'can'), ('6', 'is', 'look', 'you'), ('what', 'the', 'like', 'see'), ('colors', 'blanket', 'homes', 'tile'), ('is', '?', 'or', '?'), ('the', 'red', 'barns', 'yes'), ('feeding', 'and', '?', 'a'), ('bin', 'white', 'they', 'kitchen'), ('?', 'what', 'are', 'with'), ('black', 'color', 'old', 'light'), ('are', 'is', 'stores', 'colored'), ('there', 'the', 'from', 'wood'), ('stripes', 'tile', 'time', 'cabinets,'), ('on', '?', 'long', 'a'), ('it', 'orange', 'ago', 'black'), ('?', 'red', 'do', 'dishwasher'), ('no', 'what', 'they', 'and'), ('is', 'breed', 'have', 'a'), ('the', 'is', 'signs', 'sink'), ('wind', 'the', '?', 'in'), ('blowing', 'dog', 'nol', 'front'), ('?', '?', 'do', 'or'), ('not', 'boxer', 'you', 'a'), ('sure', 'does', 'see', 'window')], 'img_ids': [\n",
-      " 3.5102e+04\n",
-      " 1.6339e+05\n",
-      " 4.3269e+05\n",
-      " 3.0838e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 3.8620e+05\n",
-      " 3.7847e+05\n",
-      " 1.4514e+05\n",
-      " 4.1933e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 3.2321e+05\n",
-      " 2.1648e+05\n",
-      " 3.2161e+05\n",
-      " 5.4116e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 3.7943e+05\n",
-      " 1.1468e+05\n",
-      " 1.0885e+05\n",
-      " 5.4891e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 4.6150e+05\n",
-      " 4.5582e+05\n",
-      " 4.6889e+05\n",
-      " 3.7846e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 2.5932e+05\n",
-      " 5.3419e+05\n",
-      " 2.9405e+04\n",
-      " 4.2139e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 4.1157e+05\n",
-      " 5.6961e+04\n",
-      " 3.7695e+05\n",
-      " 3.6141e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 1.7648e+05\n",
-      " 3.2874e+05\n",
-      " 2.7069e+05\n",
-      " 5.5600e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 3.3224e+05\n",
-      " 8.4776e+04\n",
-      " 5.7503e+05\n",
-      " 2.1494e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      ", \n",
-      " 5.5398e+05\n",
-      " 1.0991e+04\n",
-      " 4.8016e+05\n",
-      " 3.3631e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      "], 'target': \n",
-      " 3.3224e+05\n",
-      " 3.7847e+05\n",
-      " 5.7503e+05\n",
-      " 3.7846e+05\n",
-      "[torch.LongTensor of size 4]\n",
-      "}\n",
-      "{'dialog': [('how',), ('many',), ('bikes',), ('there',), ('?',), ('3',), ('what',), ('color',), ('are',), ('bikes',), ('?',), ('i',), ('see',), ('green',), ('red',), ('and',), ('white',), ('are',), ('they',), ('parked',), ('on',), ('stock',), ('parking',), ('?',), ('no',), ('are',), ('there',), ('any',), ('people',), ('?',), ('2',), ('what',), ('are',), ('their',), ('genders',), ('?',), (\"can't\",), ('tell',), ('have',), ('on',), ('helmets',), ('what',), ('color',), ('of',), ('their',), ('helmets',), ('?',), ('green',), ('and',), ('white',), ('and',), ('other',), ('is',), ('black',), ('do',), ('they',), ('pose',), ('to',), ('picture',), ('?',), ('no',), ('are',), ('they',), ('standing',), ('by',), ('their',), ('bikes',), ('?',), ('no',), ('what',), ('are',), ('they',), ('doing',), ('?',), ('sitting',), ('on',), ('bikes',), ('white',), ('time',), ('of',), ('day',), ('is',), ('it',), ('?',), ('looks',), ('like',), ('afternoon',), ('a',), ('couple',), ('of',), ('people',), ('and',), ('some',), ('motor',), ('bikes',)], 'img_ids': [\n",
-      " 4.3269e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 3.9703e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 5.2413e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 33034\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 1.1542e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 3.3036e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 3.6001e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 3.2445e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 1.9755e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      ", \n",
-      " 2.8714e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      "], 'target': \n",
-      " 2.8714e+05\n",
-      "[torch.LongTensor of size 1]\n",
-      "}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
     "import os\n",
     "import numpy as np\n",
     "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.autograd import Variable\n",
     "\n",
+    "import sys\n",
     "import pprint\n",
     "from collections import Counter,defaultdict\n",
     "from itertools import chain\n",
     "\n",
-    "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
-    "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
-    "\n",
     "class DialogDataset(Dataset):\n",
     "    def __init__(self, json_data, transform=None):\n",
     "        self.json_data = pd.read_json(json_data, orient='index')\n",
+    "        self.corpus = self.get_words()\n",
+    "        self.vocab = list(set(self.corpus))\n",
+    "        \n",
+    "    # collect all the words from dialogs and \n",
+    "    # captions and use them to create embedding map\n",
+    "    def get_words(self):\n",
+    "        words = [datapoint['dialog'] for datapoint in self]\n",
+    "        return list(chain.from_iterable(words))\n",
+    "    \n",
+    "#     def filter_vocabulary(self):\n",
+    "#         common_words = [word for word, count in Counter(self.corpus).most_common()]\n",
+    "#         return common_words[:50]\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.json_data)\n",
     "\n",
     "    def __getitem__(self, idx):\n",
     "        item = self.json_data.iloc[idx]\n",
-    "        print(item.dialog[0])\n",
     "\n",
     "        # Flatten dialog and add caption into 1d array\n",
     "        dialog = [word for line in item.dialog for word in line[0].split()]\n",
@@ -156,106 +48,31 @@
     "        img_ids = np.array(item.img_list)\n",
     "        target = np.array([item.target, item.target_img_id])\n",
     "\n",
-    "        return {'dialog':dialog, 'img_ids':item.img_list, 'target':item.target_img_id}\n",
-    "\n",
-    "def show_batch(sample_batched):\n",
-    "    print(sample_batched)\n",
-    "\n",
-    "\n",
-    "def createEmbeddings (words, threshold):\n",
-    "    w2i = defaultdict(lambda: len(w2i))\n",
-    "    i2w = dict()\n",
-    "    wordCounts = Counter()\n",
-    "\n",
-    "    # count all the words in lower case\n",
-    "    for word in words:\n",
-    "        wordCounts[word.lower()] += 1\n",
-    "\n",
-    "    # index all words that occured at least n times\n",
-    "    for word, count in wordCounts.most_common():\n",
-    "        if count >= threshold:\n",
-    "            i2w[w2i[word]] = word\n",
-    "        else:\n",
-    "            break\n",
-    "\n",
-    "    return w2i, i2w\n",
-    "\n",
-    "# done: collect all the words from dialogs and \n",
-    "# captions and use them to create embedding map\n",
-    "def getWords(dataset):\n",
-    "    words = [dataset[i]['dialog'] for i in range(len(dataset))]\n",
-    "    return list(chain.from_iterable(words))\n",
-    "\n",
-    "    \n",
-    "dd = DialogDataset(os.path.join(*SAMPLE_EASY))\n",
-    "\n",
-    "words = getWords(dd)\n",
-    "w2i, i2w = createEmbeddings(words, 3)\n",
-    "\n",
-    "loader = DataLoader(dd, batch_size=4, shuffle=True, num_workers=4)\n",
-    "\n",
-    "for batch_num, sample in enumerate(loader):\n",
-    "    show_batch(sample)\n",
-    "    if batch_num == 3:\n",
-    "        break"
+    "        return {'dialog':dialog, 'img_ids':item.img_list, 'target':item.target_img_id}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Testing Embedding neural net class:\n",
-      "Variable containing:\n",
-      "-1.0952 -1.0703  0.6404  1.6199  0.5258\n",
-      "[torch.FloatTensor of size 1x5]\n",
-      "\n",
-      "Found context sample:  Variable containing:\n",
-      "  0\n",
-      " 38\n",
-      "  7\n",
-      " 39\n",
-      "[torch.LongTensor of size 4]\n",
-      "\n",
-      "Lengths of w2i and i2w:\n",
-      "40\n",
-      "38\n",
-      "163\n",
-      "Prediction: 141\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch.autograd as autograd\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "torch.manual_seed(1)\n",
-    "\n",
-    "#### Testing \n",
-    "print(\"Testing Embedding neural net class:\")\n",
-    "embeds = nn.Embedding(len(w2i), 5)\n",
-    "lookup_tensor = torch.LongTensor([w2i['bikes']])\n",
-    "result = embeds(autograd.Variable(lookup_tensor))\n",
-    "print(result)\n",
-    "\n",
-    "\n",
-    "context_size = 2\n",
-    "data = []\n",
-    "#Find two words before, and two words after given word.\n",
-    "for i in range(2, len(words) - 2):\n",
-    "    context = [words[i - 2], words[i - 1],\n",
-    "               words[i + 1], words[i + 2]]\n",
-    "    target = words[i]\n",
-    "    data.append((context, target))\n",
-    "\n",
+    "# Find n words before, and n words after given word\n",
+    "# and add them to the dataset\n",
+    "def scan_context(raw_text, n):\n",
+    "    data = []\n",
+    "    for i in range(n, len(raw_text) - n):\n",
+    "        context = raw_text[i-n:i] + raw_text[i+1:i+n+1]\n",
+    "        target = raw_text[i]\n",
+    "        data.append((context, target))\n",
+    "    return data\n",
     "\n",
     "class CBOW(torch.nn.Module):\n",
     "\n",
@@ -273,6 +90,7 @@
     "        \n",
     "\n",
     "    def forward(self, inputs):\n",
+    "        # i believe .view() is useless here because the sum already produces a 1xEMB_DIM vector\n",
     "        embeds = sum(self.embeddings(inputs)).view(1,-1)\n",
     "        out = self.linear1(embeds)\n",
     "        out = self.activation_function1(out)\n",
@@ -290,52 +108,160 @@
     "    tensor = torch.LongTensor(idxs)\n",
     "    return autograd.Variable(tensor)\n",
     "\n",
-    "def train_model():\n",
-    "    model = CBOW(vocab_size, EMDEDDING_DIM)\n",
+    "def sample_weights(model, n):\n",
+    "    for i, param in enumerate(model.parameters()):\n",
+    "        if i == n:\n",
+    "            print(param[0])\n",
+    "        \n",
     "\n",
-    "    loss_function = nn.NLLLoss()\n",
-    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.001)\n",
+    "def train(model, data):\n",
+    "    \n",
+    "    loss_function = nn.CrossEntropyLoss()\n",
+    "    optimizer = torch.optim.SGD(model.parameters(), lr=0.1)\n",
     "\n",
     "    for epoch in range(50):\n",
     "        total_loss = 0\n",
-    "        print(epoch)\n",
-    "        count = 0\n",
-    "        for context, target in data:\n",
-    "            context_vector = make_context_vector(context, w2i)\n",
+    "        for i, observation in enumerate(data):\n",
+    "            dialog = observation['dialog']\n",
+    "            target = observation['target']\n",
+    "            \n",
+    "            # Converts input and target to tensors\n",
+    "            context_vec = make_context_vector(dialog, w2i)\n",
+    "            target = Variable(torch.LongTensor([target.data]))\n",
+    "            \n",
+    "            # Zero out gradients\n",
     "            model.zero_grad()\n",
     "            \n",
-    "            try:\n",
-    "                log_probs = model(context_vector)\n",
-    "            except:\n",
-    "                print(\"Iteration:\", count, \"Target word:\", target, \"\\nContext:\", context_vector)\n",
-    "            \n",
-    "            loss = loss_function(log_probs, Variable(torch.LongTensor([w2i[target]])))\n",
-    "            loss.backward(retain_graph=True)\n",
+    "            # Forward pass\n",
+    "            log_probs = model(context_vec)\n",
+    "    \n",
+    "            # Calculate loss and update gradients\n",
+    "            loss = loss_function(log_probs, target)\n",
+    "            loss.backward()\n",
     "            optimizer.step()\n",
     "            \n",
     "            total_loss += loss.data\n",
-    "            count += 1\n",
+    "        \n",
+    "        if epoch % 10 == 0:\n",
+    "            print(\"Finished epoch\", epoch, \"loss:\", total_loss)\n",
+    "            sample_weights(model, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
+    "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
+    "EMBEDDING_DIM = 5\n",
+    "CONTEXT_SIZE = 2\n",
+    "FREQ_THRESHOLD = 0\n",
     "\n",
-    "# Uncomment to train:\n",
-    "# train()\n",
+    "torch.manual_seed(1)\n",
+    "dialog_data = DialogDataset(os.path.join(*SAMPLE_EASY))\n",
     "\n",
-    "sample = make_context_vector(data[11][0], w2i)\n",
-    "print(\"Found context sample: \", sample)\n",
-    "a = model(sample).data.numpy()\n",
+    "w2i = {word : i for i, word in enumerate(dialog_data.vocab)}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample text feature: \n",
+      "\n",
+      " Variable containing:\n",
+      "\n",
+      "Columns 0 to 7 \n",
+      "-10.6338 -10.1004 -11.8775 -10.6243 -10.4888 -12.0977  -8.0102  -6.8183\n",
+      "\n",
+      "Columns 8 to 15 \n",
+      " -3.1825  -4.6175  -9.2084 -16.5549 -13.4291 -14.3406  -6.9950  -8.0047\n",
+      "\n",
+      "Columns 16 to 23 \n",
+      " -9.2783 -12.0327 -11.1683  -7.1018 -11.7965  -9.6078 -11.3064 -10.3735\n",
+      "\n",
+      "Columns 24 to 31 \n",
+      " -8.1839 -12.0130 -15.1411  -4.2859 -12.3538  -5.1868  -7.3269 -11.8197\n",
+      "\n",
+      "Columns 32 to 39 \n",
+      "-10.5630 -11.7885  -8.7020 -13.0513 -11.3707  -6.8526  -7.0757 -16.1151\n",
+      "\n",
+      "Columns 40 to 47 \n",
+      "-10.3158  -6.4633  -9.9530  -7.1912  -6.8112  -9.7762  -7.8742  -6.6350\n",
+      "\n",
+      "Columns 48 to 55 \n",
+      " -7.6338  -7.3580 -13.7431  -9.9217  -8.1045 -11.2687  -7.2950  -8.1376\n",
+      "\n",
+      "Columns 56 to 63 \n",
+      "-12.7855 -12.6861 -16.0727  -1.6448  -6.8837 -11.1470 -10.0113 -12.5082\n",
+      "\n",
+      "Columns 64 to 71 \n",
+      " -9.2732  -7.5832  -8.4038 -15.3918 -17.4359 -11.8781  -7.9767  -6.4230\n",
+      "\n",
+      "Columns 72 to 79 \n",
+      "-12.2951  -7.3652 -14.8451 -14.0839  -9.0215 -15.5635 -12.9066 -12.0712\n",
+      "\n",
+      "Columns 80 to 87 \n",
+      "-10.7096  -8.7530 -10.2872  -5.9924  -5.2413  -7.1296  -6.7896  -8.1038\n",
+      "\n",
+      "Columns 88 to 95 \n",
+      " -7.3905 -10.8168  -9.9111  -6.1145 -10.0838 -11.1935  -3.9310 -13.3214\n",
+      "\n",
+      "Columns 96 to 103 \n",
+      " -9.0309  -6.4020  -9.1090  -6.6488  -6.9668  -7.7798  -6.3579  -7.3810\n",
+      "\n",
+      "Columns 104 to 111 \n",
+      "-13.2719  -9.1269  -5.5637  -9.2261 -11.7560 -14.0037  -7.5345 -13.1469\n",
+      "\n",
+      "Columns 112 to 119 \n",
+      "-17.2366 -10.1706  -5.8953  -1.5316 -10.2053 -12.1434  -4.5005  -9.8019\n",
+      "\n",
+      "Columns 120 to 127 \n",
+      " -9.0684 -10.4603 -13.0668  -8.8378  -9.8896  -9.7762  -7.1318  -3.0060\n",
+      "\n",
+      "Columns 128 to 135 \n",
+      "-12.1798 -10.2047  -9.6583  -7.0928  -9.9998 -10.4180  -9.0965 -13.6114\n",
+      "\n",
+      "Columns 136 to 143 \n",
+      "-11.5178 -10.7994  -9.7317  -1.6912 -13.7683 -12.3723  -4.4396 -10.8900\n",
+      "\n",
+      "Columns 144 to 151 \n",
+      " -7.3635 -12.7958 -10.1162  -7.7622  -8.8112  -8.9082  -5.1424  -6.2589\n",
+      "\n",
+      "Columns 152 to 159 \n",
+      "-10.1765 -10.1191  -8.4763 -12.3244 -11.6317 -13.2461  -7.1632 -10.5642\n",
+      "\n",
+      "Columns 160 to 162 \n",
+      " -1.6926 -11.8085 -12.4263\n",
+      "[torch.FloatTensor of size 1x163]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = CBOW(len(w2i), EMBEDDING_DIM)\n",
     "\n",
-    "print(\"Lengths of w2i and i2w:\")\n",
-    "print(len(w2i))\n",
-    "print(len(i2w))\n",
-    "# Something is wrong with i2w, it's not of the same length as w2i!\n",
-    "print(\"Prediction:\", np.argmax(a[0]))"
+    "train(model, dialog_data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -356,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2rc1"
   }
  },
  "nbformat": 4,
