corrected output of MaxEnt to column vector and added counter for correct predictions

--- a/cbow_preprocessing.ipynb
+++ b/cbow_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,10 +15,30 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from torch.autograd import Variable\n",
     "\n",
+    "import time\n",
     "import sys\n",
     "import pprint\n",
     "from collections import Counter,defaultdict\n",
     "from itertools import chain\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "\n",
+    "# TODO: find scientific reference that also claims Snowball is better\n",
+    "# alternatively: http://www.nltk.org/howto/stem.html claims this already.\n",
+    "from nltk.stem import SnowballStemmer, PorterStemmer\n",
+    "\n",
+    "# check if stopword corpus is available on your system\n",
+    "try:\n",
+    "    _ = stopwords.words('english')\n",
+    "except:\n",
+    "    nltk.download('stopwords')\n",
+    "    \n",
+    "try:\n",
+    "    _ = WordNetLemmatizer().lemmatize('test')\n",
+    "except:\n",
+    "    nltk.download('wordnet')\n",
     "\n",
     "class DialogDataset(Dataset):\n",
     "    \n",
@@ -29,7 +49,7 @@
     "            \n",
     "        self.img_features = np.asarray(h5py.File(image_features, 'r')['img_features'])\n",
     "        self.json_data = pd.read_json(json_data, orient='index')\n",
-    "        self.corpus = self.get_words()\n",
+    "        self.corpus = self.filter_document(self.get_words())\n",
     "        self.vocab = list(set(self.corpus))\n",
     "        self.w2i = {word : i for i, word in enumerate(self.vocab)}\n",
     "        \n",
@@ -52,6 +72,26 @@
     "        idxs = [self.w2i[w] for w in context]\n",
     "        tensor = torch.LongTensor(idxs)\n",
     "        return autograd.Variable(tensor)\n",
+    "    \n",
+    "    def filter_document(self, document):\n",
+    "        \"\"\"Filter list of words based on some conventinal methods, like removing stopwords and\n",
+    "        lemmatization\"\"\"\n",
+    "        \n",
+    "#         # Remove stop words\n",
+    "        stop_words = stopwords.words('english')\n",
+    "        document = filter(lambda x: x not in stop_words, document)\n",
+    "        \n",
+    "        # Lemmatize\n",
+    "#         lemmatizer = WordNetLemmatizer()\n",
+    "#         document = map(lemmatizer.lemmatize, document)\n",
+    "        \n",
+    "#         # Stem\n",
+    "        stemmer = SnowballStemmer('english')\n",
+    "        document = map(stemmer.stem, document)\n",
+    "        \n",
+    "        return document\n",
+    "        \n",
+    "        \n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.json_data)\n",
@@ -62,6 +102,7 @@
     "        # Flatten dialog and add caption into 1d array\n",
     "        dialog = [word for line in item.dialog for word in line[0].split()]\n",
     "        dialog.extend(item.caption.split(' '))\n",
+    "        dialog = self.filter_document(dialog)\n",
     "        dialog = self.make_context_vector(dialog)\n",
     "\n",
     "        img_ids = np.array(item.img_list)\n",
@@ -76,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 242,
    "metadata": {
     "scrolled": false
    },
@@ -114,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +166,6 @@
     "\n",
     "        self.text_module = text_module\n",
     "        self.linear = nn.Linear(vocab_size + img_size, 1)\n",
-    "        self.softmax = nn.LogSoftmax()\n",
     "        \n",
     "    def forward(self, inp):\n",
     "        dialog = inp['dialog']\n",
@@ -137,16 +177,26 @@
     "        concat = torch.cat((all_img_features, text_features), 1)\n",
     "        \n",
     "        scores = self.linear(concat)\n",
-    "        self.softmax(scores)\n",
+    "        scores = F.log_softmax(scores.transpose(0, 1))\n",
     "        \n",
-    "        return scores"
+    "        return scores\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 244,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1min 30s, sys: 2.8 s, total: 1min 33s\n",
+      "Wall time: 1min 44s\n"
+     ]
+    }
+   ],
    "source": [
     "SAMPLE_EASY = ['Data', 'sample_easy.json']\n",
     "TRAIN_EASY = ['Data', 'Easy', 'IR_train_easy.json']\n",
@@ -159,7 +209,7 @@
     "\n",
     "torch.manual_seed(1)\n",
     "# dialog_data = DialogDataset(os.path.join(*SAMPLE_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
-    "dialog_data = DialogDataset(os.path.join(*TRAIN_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
+    "%time dialog_data = DialogDataset(os.path.join(*TRAIN_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "valid_data = DialogDataset(os.path.join(*VALID_EASY), os.path.join(*IMG_FEATURES), os.path.join(*INDEX_MAP))\n",
     "\n",
     "vocab_size = len(dialog_data.vocab)"
@@ -167,27 +217,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       "-0.4625\n",
-       "-0.4318\n",
-       "-0.4696\n",
-       "-0.4225\n",
-       "-0.3396\n",
-       "-0.4930\n",
-       "-0.3891\n",
-       "-0.4470\n",
-       "-0.3531\n",
-       "-0.3667\n",
-       "[torch.FloatTensor of size 10x1]"
+       "-2.2969 -2.3151 -2.3128 -2.3159 -2.4021 -2.3224 -2.2387 -2.3621 -2.1880 -2.2877\n",
+       "[torch.FloatTensor of size 1x10]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 246,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,18 +241,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       " 0.5526\n",
+       " 2.3980\n",
        "[torch.FloatTensor of size 1]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +265,7 @@
     "        pred = model(inp)\n",
     "        target = Variable(torch.LongTensor(np.array([target])))\n",
     "        \n",
-    "        loss = loss_func(pred.transpose(0,1), target)\n",
+    "        loss = loss_func(pred, target)\n",
     "        total_loss += loss\n",
     "        \n",
     "        if i == 20:\n",
@@ -232,61 +273,90 @@
     "    \n",
     "    return total_loss / 20\n",
     "\n",
+    "def predict(model, data):\n",
+    "    correct = 0\n",
+    "    \n",
+    "    for i, (inp, target) in enumerate(data):\n",
+    "        pred = model(inp)\n",
+    "        img, idx = torch.max(pred, 1)\n",
+    "        if idx.data[0] == target:\n",
+    "            correct += 1\n",
+    "        \n",
+    "        if i == 20:\n",
+    "            break\n",
+    "    \n",
+    "    return correct\n",
+    "\n",
     "validate(max_ent, valid_data, nn.NLLLoss())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: -1276.8059284961223\n",
-      "Epoch 2: -4149.83330078125\n",
-      "Epoch 3: -6921.88115234375\n",
-      "Epoch 4: -9652.47138671875\n",
-      "Epoch 5: -12365.341357421876\n",
-      "Epoch 6: -15068.271591796874\n",
-      "Epoch 7: -17764.837802734375\n",
-      "Epoch 8: -20456.991953125\n",
-      "Epoch 9: -23145.9165625\n",
-      "Epoch 10: -25832.38791015625\n",
-      "[-2793.2744140625, -5692.6083984375, -8518.6376953125, -11320.9833984375, -14111.189453125, -16893.91015625, -19671.60546875, -22445.732421875, -25217.240234375, -27986.712890625]\n"
+      "Epoch 1: 2.309984299182892\n",
+      "Predicted 1/20 samples correctly\n",
+      "Epoch 2: 2.292324097156525\n",
+      "Predicted 7/20 samples correctly\n",
+      "Epoch 3: 2.2774351871013643\n",
+      "Predicted 7/20 samples correctly\n",
+      "Epoch 4: 2.2647252728939056\n",
+      "Predicted 8/20 samples correctly\n",
+      "Epoch 5: 2.253857351064682\n",
+      "Predicted 9/20 samples correctly\n",
+      "Epoch 6: 2.244542367696762\n",
+      "Predicted 11/20 samples correctly\n",
+      "Epoch 7: 2.2365342650413513\n",
+      "Predicted 11/20 samples correctly\n",
+      "Epoch 8: 2.2296245720386505\n",
+      "Predicted 11/20 samples correctly\n",
+      "Epoch 9: 2.2236373114585875\n",
+      "Predicted 11/20 samples correctly\n",
+      "Epoch 10: 2.218424485683441\n",
+      "Predicted 11/20 samples correctly\n",
+      "[2.426304578781128, 2.4022343158721924, 2.38154935836792, 2.3637640476226807, 2.3484585285186768, 2.335270881652832, 2.3238911628723145, 2.314053773880005, 2.3055310249328613, 2.298130512237549]\n"
      ]
     }
    ],
    "source": [
     "EPOCHS = 10\n",
     "\n",
+    "cbow_model = CBOW(vocab_size, EMBEDDING_DIM)\n",
+    "max_ent = MaxEnt(cbow_model, vocab_size, IMG_SIZE)\n",
     "loss_func = nn.NLLLoss()\n",
-    "optimizer = optim.Adam(max_ent.parameters(), lr=1e-03)\n",
+    "optimizer = optim.Adam(max_ent.parameters(), lr=1e-05)\n",
     "validation_errors = []\n",
     "\n",
     "for epoch in range(1, EPOCHS + 1):\n",
     "    total_loss = 0\n",
     "    for i, (inp, target) in enumerate(dialog_data):\n",
     "        \n",
+    "        # Make prediction\n",
     "        pred = max_ent(inp)\n",
-    "        \n",
     "        target = Variable(torch.LongTensor(np.array([target])))\n",
     "\n",
-    "        # Output of MaxEnt is column vector, loss needs row vector\n",
-    "        loss = loss_func(pred.transpose(0, 1), target)\n",
+    "        # Calculate loss\n",
+    "        loss = loss_func(pred, target)\n",
     "        total_loss += loss.data[0]\n",
-    "            \n",
+    "        \n",
+    "        # Zero out gradients\n",
     "        max_ent.zero_grad()\n",
     "        \n",
+    "        # Backpropagate and update parameters\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if i == 100:\n",
+    "        if i == 500:\n",
     "            break\n",
     "    \n",
-    "    total_loss = total_loss / 100\n",
+    "    total_loss = total_loss / 500\n",
     "    print(\"Epoch {}: {}\".format(epoch, total_loss))\n",
+    "    print(\"Predicted {}/20 samples correctly\".format(predict(max_ent, valid_data)))\n",
     "    \n",
     "    val = validate(max_ent, valid_data, loss_func)\n",
     "    validation_errors.append(val.data[0])\n",
