--- a/dataloader_cbow.ipynb
+++ b/dataloader_cbow.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
     "        concat = torch.cat((all_img_features, text_features), 1)\n",
     "        \n",
     "        scores = self.linear(concat)\n",
-    "        self.softmax(scores)\n",
+    "        scores = self.softmax(scores.transpose(0, 1))\n",
     "        \n",
     "        return scores"
    ]
@@ -167,27 +167,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       "-0.4625\n",
-       "-0.4318\n",
-       "-0.4696\n",
-       "-0.4225\n",
-       "-0.3396\n",
-       "-0.4930\n",
-       "-0.3891\n",
-       "-0.4470\n",
-       "-0.3531\n",
-       "-0.3667\n",
-       "[torch.FloatTensor of size 10x1]"
+       "-2.2497 -2.2939 -2.3790 -2.2853 -2.2032 -2.3234 -2.2990 -2.3669 -2.2841 -2.3546\n",
+       "[torch.FloatTensor of size 1x10]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,18 +191,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Variable containing:\n",
-       " 0.5526\n",
+       " 2.3480\n",
        "[torch.FloatTensor of size 1]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +215,7 @@
     "        pred = model(inp)\n",
     "        target = Variable(torch.LongTensor(np.array([target])))\n",
     "        \n",
-    "        loss = loss_func(pred.transpose(0,1), target)\n",
+    "        loss = loss_func(pred, target)\n",
     "        total_loss += loss\n",
     "        \n",
     "        if i == 20:\n",
@@ -232,37 +223,63 @@
     "    \n",
     "    return total_loss / 20\n",
     "\n",
+    "def predict(model, data):\n",
+    "    correct = 0\n",
+    "    \n",
+    "    for i, (inp, target) in enumerate(data):\n",
+    "        pred = model(inp)\n",
+    "        img, idx = torch.max(pred, 1)\n",
+    "        if idx.data[0] == target:\n",
+    "            correct += 1\n",
+    "        \n",
+    "        if i == 20:\n",
+    "            break\n",
+    "    \n",
+    "    return correct\n",
+    "\n",
     "validate(max_ent, valid_data, nn.NLLLoss())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: -1276.8059284961223\n",
-      "Epoch 2: -4149.83330078125\n",
-      "Epoch 3: -6921.88115234375\n",
-      "Epoch 4: -9652.47138671875\n",
-      "Epoch 5: -12365.341357421876\n",
-      "Epoch 6: -15068.271591796874\n",
-      "Epoch 7: -17764.837802734375\n",
-      "Epoch 8: -20456.991953125\n",
-      "Epoch 9: -23145.9165625\n",
-      "Epoch 10: -25832.38791015625\n",
-      "[-2793.2744140625, -5692.6083984375, -8518.6376953125, -11320.9833984375, -14111.189453125, -16893.91015625, -19671.60546875, -22445.732421875, -25217.240234375, -27986.712890625]\n"
+      "Epoch 1: 2.3020203099250796\n",
+      "Predicted 4/20 samples correctly\n",
+      "Epoch 2: 2.285960863113403\n",
+      "Predicted 8/20 samples correctly\n",
+      "Epoch 3: 2.272419318199158\n",
+      "Predicted 9/20 samples correctly\n",
+      "Epoch 4: 2.260829509735107\n",
+      "Predicted 10/20 samples correctly\n",
+      "Epoch 5: 2.250883805990219\n",
+      "Predicted 10/20 samples correctly\n",
+      "Epoch 6: 2.2423208281993867\n",
+      "Predicted 9/20 samples correctly\n",
+      "Epoch 7: 2.234920102357864\n",
+      "Predicted 10/20 samples correctly\n",
+      "Epoch 8: 2.2284959616661073\n",
+      "Predicted 10/20 samples correctly\n",
+      "Epoch 9: 2.2228928501605987\n",
+      "Predicted 10/20 samples correctly\n",
+      "Epoch 10: 2.217980490922928\n",
+      "Predicted 11/20 samples correctly\n",
+      "[2.3881301879882812, 2.366870880126953, 2.3486194610595703, 2.332937240600586, 2.3194475173950195, 2.3078274726867676, 2.297800302505493, 2.289130210876465, 2.281618356704712, 2.2750935554504395]\n"
      ]
     }
    ],
    "source": [
     "EPOCHS = 10\n",
     "\n",
+    "cbow_model = CBOW(vocab_size, EMBEDDING_DIM)\n",
+    "max_ent = MaxEnt(cbow_model, vocab_size, IMG_SIZE)\n",
     "loss_func = nn.NLLLoss()\n",
-    "optimizer = optim.Adam(max_ent.parameters(), lr=1e-03)\n",
+    "optimizer = optim.Adam(max_ent.parameters(), lr=1e-05)\n",
     "validation_errors = []\n",
     "\n",
     "for epoch in range(1, EPOCHS + 1):\n",
@@ -273,8 +290,7 @@
     "        \n",
     "        target = Variable(torch.LongTensor(np.array([target])))\n",
     "\n",
-    "        # Output of MaxEnt is column vector, loss needs row vector\n",
-    "        loss = loss_func(pred.transpose(0, 1), target)\n",
+    "        loss = loss_func(pred, target)\n",
     "        total_loss += loss.data[0]\n",
     "            \n",
     "        max_ent.zero_grad()\n",
@@ -282,11 +298,12 @@
     "        loss.backward()\n",
     "        optimizer.step()\n",
     "        \n",
-    "        if i == 100:\n",
+    "        if i == 500:\n",
     "            break\n",
     "    \n",
-    "    total_loss = total_loss / 100\n",
+    "    total_loss = total_loss / 500\n",
     "    print(\"Epoch {}: {}\".format(epoch, total_loss))\n",
+    "    print(\"Predicted {}/20 samples correctly\".format(predict(max_ent, valid_data)))\n",
     "    \n",
     "    val = validate(max_ent, valid_data, loss_func)\n",
     "    validation_errors.append(val.data[0])\n",
